2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Appease compiler when using `spr'.

	* tools/lib/slc/lower/split.py (SplitCreates.visit_lowcreate):
	Ensure label for first alternative is always used.

	* tools/lib/slc/lower/lowercreate.py (AutoResolve): New visitor to
	ensure that the resolved label is always used.
	* tools/lib/slc/front/chains.py: Use it.

	* tools/lib/slc/lower/seq.py: Indicate that `__slI' is maybe unused.

	* tools/lib/slc/mtalpha/visitors.py: Ensure that the end label is
	always used.

	* tools/lib/slc/lower/split.py (SplitCreates): Simplify by reusing
	`ScopedVisitor'.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor MT-Alpha optimizations.

	* tools/bin/cce.in: Option `-mcpu' actually overrides `-mfix',
	etc. In order to use all ISA extensions, use `-mcpu=21264a'
	instead.

	* lib/include/cstrings.h: Declare `ffs'.
	* lib/src/ffs.c: New.
	* lib/mtalpha.mk: Tell `malloc' to use `ffs'. Compile `ffs.c'.

2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add missing module initializers in slc library.

	* tools/lib/slc/input/__init__.py,
	* tools/lib/slc/lower/__init__.py: New.

2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug with `slr -n'.

	* lib/src/mtinit.c: Dereference function pointer in SEP call. Turn
	`sys_set_main_pid' into a plain function.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	* doc/NEWS.txt: Initialize for 3.x.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 3.0.

	* build-aux/package-version: Update to 3.0.

	* doc/NEWS.txt: Document recent changes.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.

	* tools/lib/mtalpha.mk,
	* tools/lib/ptl.mk,
	* tools/lib/seqc.mk: Use `-nostdlib' to appease `cce' while `slrt'
	is being built.
	
	* tools/lib/Makefile.am (nodist_nobase_python_PYTHON): Do not
	distribute `slc_config.py', since it must be regenerated for every
	installation.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>
